--- a/config/AIO.yaml
+++ b/config/AIO.yaml
@@ -16,7 +16,7 @@ proxy-providers:
     url: "http://172.16.1.50:3001/D2UhuYViWtqwddacM4ss/download/collection/AIO"
 
 mixed-port: 7890
-ipv6: true
+ipv6: false
 log-level: warning
 allow-lan: true
 skip-auth-prefixes:
@@ -39,8 +39,6 @@ profile:
 
 sniffer:
   enable: true
-  force-dns-mapping: false
-  parse-pure-ip: true
   sniff:
     HTTP:
       ports: [80, 8080-8880]
@@ -63,11 +61,23 @@ tun:
 dns:
   enable: true
   cache-algorithm: arc
-  ipv6: true
+  ipv6: false
   listen: 0.0.0.0:1053
-  enhanced-mode: redir-host
+  enhanced-mode: fake-ip
+  fake-ip-range: 198.18.0.0/15
+  fake-ip-filter:
+    - "*"
+    - "+.lan"
+    - "+.local"
+    - "+.ts.net"
+    - "+.market.xiaomi.com"
   nameserver:
     - "https://101.34.254.32/ihtw"
+  nameserver-policy:
+    "*": 127.0.0.1#lo
+    "+.lan": 127.0.0.1#lo
+    "+.local": 127.0.0.1#lo
+    "+.ts.net": 127.0.0.1#tailscale0 
 
 ntp:
   enable: true
