--- a/config/AIB.yaml
+++ b/config/AIB.yaml
@@ -63,12 +63,8 @@ dns:
   listen: 0.0.0.0:1053
   enhanced-mode: fake-ip
   fake-ip-range: 198.18.0.0/15
-  fake-ip-filter:
-    - "*"
-    - "+.lan"
-    - "+.local"
-    - "+.ts.net"
-    - "+.market.xiaomi.com"
+  fake-ip-filter: 
+    - "ruleset:no-fakeip"
   nameserver:
     - 223.5.5.5
     - 119.29.29.29
@@ -251,3 +247,6 @@ rule-providers:
   steam:
     <<: *mrs
     url: "https://raw.ihtw.moe/github.com/MetaCubeX/meta-rules-dat/raw/meta/geo/geosite/steam.mrs"
+  no-fakeip:
+    <<: *domaintxt
+    url: "https://raw.ihtw.moe/raw.githubusercontent.com/JohnsonRan/CRules/master/rules/no-fakeip.txt"
