--- a/config/AIO.yaml
+++ b/config/AIO.yaml
@@ -74,7 +74,12 @@ dns:
     "*": 127.0.0.1#lo
     "+.lan": 127.0.0.1#lo
     "+.local": 127.0.0.1#lo
-    "+.ts.net": 127.0.0.1#tailscale0 
+    "+.ts.net": 127.0.0.1#tailscale0
+    "rule-set:cn_site,apple-cn":
+      - system
+      - 101.226.4.6
+    "rule-set:ecs-no-cn":
+      - '223.5.5.5#ecs=61.221.31.1/24&ecs-override=true'
 
 ntp:
   enable: true
@@ -249,3 +254,6 @@ rule-providers:
   no-fakeip:
     <<: *domaintxt
     url: "https://raw.ihtw.moe/raw.githubusercontent.com/JohnsonRan/CRules/master/rules/no-fakeip.txt"
+  ecs-no-cn:
+    <<: *domaintxt
+    url: "https://raw.ihtw.moe/raw.githubusercontent.com/JohnsonRan/CRules/master/rules/ecs-no-cn.txt"
