--- a/config/AIB.yaml
+++ b/config/AIB.yaml
@@ -70,14 +70,13 @@ dns:
   nameserver:
     - 223.5.5.5
     - 119.29.29.29
+  direct-nameserver:
+    - system
   nameserver-policy:
     "*": 127.0.0.1#lo
     "+.lan": 127.0.0.1#lo
     "+.local": 127.0.0.1#lo
     "+.ts.net": 127.0.0.1#tailscale0
-    "rule-set:cn_site,apple-cn":
-      - system
-      - 101.226.4.6
     "rule-set:ecs-no-cn":
       - '223.5.5.5#ecs=61.221.31.1/24&ecs-override=true'
 
@@ -128,6 +127,7 @@ rules:
   - RULE-SET,httpdns,ADBlock
   - RULE-SET,category-cngames,DIRECT
   - RULE-SET,win-update,DIRECT
+  - RULE-SER,apple-cn,DIRECT
   - RULE-SET,speedtest,Speedtest
   - RULE-SET,apple_proxy,Apple
   - RULE-SET,biliintl,节点选择
