fix: use nameserver-policy to avoid re-resolve

--- a/config/AIO.yaml
+++ b/config/AIO.yaml
@@ -71,9 +71,6 @@ dns:
   nameserver:
     - https://8.8.8.8/dns-query
     - https://208.67.222.2/dns-query
-  direct-nameserver:
-    - 223.5.5.5
-    - 119.29.29.29
   proxy-server-nameserver:
     - system
     - 223.5.5.5
@@ -84,6 +81,9 @@ dns:
     "+.ts.net": 127.0.0.1#tailscale0
     "rule-set:ecs-no-cn":
       - '223.5.5.5#ecs=61.221.31.1/24&ecs-override=true'
+    "rule-set:custom_direct,category-cngames,win-update,apple-cn,steamcn,cn_site,chinadomains":
+      - 223.5.5.5
+      - 119.29.29.29
 
 ntp:
   enable: true
