mihomo: don't fake cn domains

--- a/config/AIB.yaml
+++ b/config/AIB.yaml
@@ -67,6 +67,8 @@ dns:
   fake-ip-range: 198.18.0.0/15
   fake-ip-filter: 
     - "ruleset:no-fakeip"
+    - "ruleset:chinadomains"
+    - "ruleset:cn_site"
   respect-rules: true
   nameserver:
     - https://8.8.8.8/dns-query
