--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,12 @@
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
+node_modules/
 
-# testing
-/coverage
 
 # next.js
-/.next/
-/out/
+.next/
 
 # production
-/build
+build/
 
 # misc
 .DS_Store
@@ -23,11 +18,11 @@ yarn-debug.log*
 yarn-error.log*
 
 # vercel
-.vercel
+.vercel/
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
 
-# resources
-/public/resources
+public/
+
