add more PCDN domains

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,6 +3,9 @@ name: Build frontend
 on:
   schedule:
     - cron: '0 0 * * *' 
+  push:
+    branches:
+      - master
   workflow_dispatch:
 
 jobs:
