--- a/config/AIO.yaml
+++ b/config/AIO.yaml
@@ -67,7 +67,7 @@ dns:
   listen: 0.0.0.0:1053
   enhanced-mode: fake-ip
   fake-ip-range: 28.0.0.0/8
-  fake-ip-range6: 2800:a55:1145:1419:1981:810::/96
+  fake-ip-range6: 2800:1145:1419:1981:810::/96
   fake-ip-filter: 
     - "rule-set:no-fakeip"
     - "rule-set:chinadomains"
